fix background-attachment on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -807,6 +807,7 @@ a {
     }
   }
   @media (max-width: 575px) {
+    background-attachment: initial;
     .box-container {
       .container-screens {
         width: 90%;
@@ -1239,7 +1240,7 @@ a {
     }
   }
   @media (max-width: 425px) {
-    background-position: initial;
+    background-attachment: initial;
     .content {
       h3 {
         font-size: 50px;
